--- a/index.html
+++ b/index.html
@@ -1,14 +1,35 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
+    <meta charset="UTF-8">
+
     <title>OHARA'S TREE</title>
 
     <!-- attach our stylesheet -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- header element -->
+    <header>
+        <h1>Ohara's tree</h1>
+    </header>
 
 
+    <!-- main element -->
+    <main>
+        <article>
+
+            <table>
+            </table>
+
+        </article>
+    </main>
+
+
+    <!-- main element -->
+    <footer>
+        <p>Create by: chermosi</p>
+    </footer>
 
 </body>
 </html>
