--- a/index.html
+++ b/index.html
@@ -20,6 +20,27 @@
         <article>
 
             <table>
+                <tr>
+                    <th>Titulo</th>
+                    <th>Tipo</th>
+                    <th>Coleccion</th>
+                    <th>Autor</th>
+                    <th>Formato</th>
+                </tr>
+                <tr>
+                    <td>Eon: El Despertar del Ojo de Dragon</td>
+                    <td>Saga</td>
+                    <td>Dragones celestiales 1</td>
+                    <td>Alison Goodman</td>
+                    <td>Digital EPUB</td>
+                </tr>
+                <tr>
+                    <td>Legend</td>
+                    <td>Saga</td>
+                    <td>Legend 1</td>
+                    <td>Marie Lu</td>
+                    <td>Digital PDF</td>
+                </tr> 
             </table>
 
         </article>
