--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <article>
 
             <table>
-                <tr>
+                <tr class="tabla-libros-cabezera">
                     <th>Titulo</th>
                     <th>Tipo</th>
                     <th>Coleccion</th>
