--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- header element -->
     <header>
         <h1>Ohara's tree</h1>
+        <h2>Libros registrados</h2>
     </header>
 
 
@@ -19,7 +20,7 @@
     <main>
         <article>
 
-            <table>
+            <table class="tabla-libros">
                 <tr class="tabla-libros-cabezera">
                     <th>Titulo</th>
                     <th>Tipo</th>
