--- a/index.html
+++ b/index.html
@@ -10,16 +10,28 @@
 </head>
 <body>
     <!-- header element -->
-    <header>
-        <h1>Ohara's tree</h1>
-        <h2>Libros registrados</h2>
+    <header class="cabezera">
+        <!-- our main logo -->
+        <a id="logo" href="index.html">
+            <span>Ohara's tree</span>
+        </a>
+
+        <!-- main navigation links -->
+        <nav class="cabezera-menu">
+            <ul>
+                <li><a href="#">Agregar libro</a></li>
+                <li><a href="#">Login</a></li>
+            </ul>
+       </nav>
+      
     </header>
 
 
     <!-- main element -->
     <main>
         <article>
-
+            <h2>Libros registrados</h2>
+            
             <table class="tabla-libros">
                 <tr class="tabla-libros-cabezera">
                     <th>Titulo</th>
