--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- header element -->
     <header class="cabezera">
         <!-- our main logo -->
-        <a id="logo" href="index.html">
+        <a id="logo" class="cabezera-logo" href="index.html">
             <span>Ohara's tree</span>
         </a>
 
