--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             alert("bok directo "+bookLista.title);
                    
            for(var book in bookLista){
-	            alert("bok for "++book.title);
+	            alert("bok for "+book.title);
             }
         });
         
