--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- main navigation links -->
         <nav class="cabezera-menu">
             <ul>
-                <li><a href="#">Agregar libro</a></li>
+                <li><a href="/html/createbook.html">Agregar libro</a></li>
                 <li><a href="#">Login</a></li>
             </ul>
        </nav>
@@ -39,21 +39,8 @@
                     <th>Coleccion</th>
                     <th>Autor</th>
                     <th>Formato</th>
-                </tr>
-                <tr>
-                    <td>Eon: El Despertar del Ojo de Dragon</td>
-                    <td>Saga</td>
-                    <td>Dragones celestiales 1</td>
-                    <td>Alison Goodman</td>
-                    <td>Digital EPUB</td>
-                </tr>
-                <tr>
-                    <td>Legend</td>
-                    <td>Saga</td>
-                    <td>Legend 1</td>
-                    <td>Marie Lu</td>
-                    <td>Digital PDF</td>
-                </tr> 
+		</tr>
+                
             </table>
 
         </article>
