--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- main navigation links -->
         <nav class="cabezera-menu">
             <ul>
-                <li><a href="/html/createbook.html">Agregar libro</a></li>
+                <li><a href="./html/createbook.html">Agregar libro</a></li>
                 <li><a href="#">Login</a></li>
             </ul>
        </nav>
