--- a/html/createbook.html
+++ b/html/createbook.html
@@ -45,8 +45,12 @@
     
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script> 
-        axios.post('https://www.googleapis.com/books/v1/volumes', {
-            q: 'armada'
+        const axios = require('axios');
+        
+        axios.get('https://www.googleapis.com/books/v1/volumes', {
+           params: {
+                q: 'armada'
+            }
         })
         .then(function (response) {
             console.log(response);
