--- a/html/createbook.html
+++ b/html/createbook.html
@@ -47,7 +47,7 @@
     <script> 
       
         
-        axios.post('http://jsonplaceholder.typicode.com/todos', {
+        axios.post('https://jsonplaceholder.typicode.com/todos', {
         userId: '1',
         title: 'delectus aut autem',
         completed: false
