--- a/html/createbook.html
+++ b/html/createbook.html
@@ -53,10 +53,10 @@
         completed: false
         })
   .then(function (response) {
-    resultElement.innerHTML = generateSuccessHTMLOutput(response);
+    console.log(response);
   })
   .catch(function (error) {
-    resultElement.innerHTML = generateErrorHTMLOutput(error);
+    console.log(error);
   });
         
     </script>
