--- a/html/createbook.html
+++ b/html/createbook.html
@@ -69,7 +69,7 @@
             var rowCount = table.rows.length;
     	    var row = table.insertRow(rowCount);
             
-	    for (var i=0; i < 10; i++){
+	    for (i=0; i < 10; i++){
 	    	row.insertCell(0).innerHTML= response.items[i].volumeInfo.title;
     		row.insertCell(1).innerHTML= response.items[i].volumeInfo.authors;
     		row.insertCell(2).innerHTML= response.items[i].volumeInfo.title;
