--- a/html/createbook.html
+++ b/html/createbook.html
@@ -75,7 +75,7 @@
 
 		
 	    	row.insertCell(0).innerHTML= libro.volumeInfo.title;
-    		row.insertCell(1).innerHTML= libro.volumeInfo.authors;
+    		row.insertCell(1).innerHTML= libro.volumeInfo.title;
     		row.insertCell(2).innerHTML= libro.volumeInfo.title;
     		row.insertCell(3).innerHTML= libro.volumeInfo.title;
     		row.insertCell(4).innerHTML= libro.volumeInfo.title;
