--- a/html/createbook.html
+++ b/html/createbook.html
@@ -71,7 +71,7 @@
             var rowCount = table.rows.length;
     	    var row = table.insertRow(rowCount);
             
-           console.log(response);
+           console.log(respuesta);
 		
 	
 
