--- a/html/createbook.html
+++ b/html/createbook.html
@@ -81,14 +81,14 @@
 		
 	    for (var i = 0; i < 10; i++){
 		document.getElementById("content").innerHTML += "<br>" + data;
-		  var libro = respuesta.items[i];
+		 
 
 		
-	    	row.insertCell(0).innerHTML= libro.volumeInfo.title;
-    		row.insertCell(1).innerHTML= respuesta.items.volumeInfo.title;
+	    	row.insertCell(0).innerHTML= respuesta.volumeInfo.title;
+    		row.insertCell(1).innerHTML= respuesta.volumeInfo.title;
     		row.insertCell(2).innerHTML= respuesta.volumeInfo.title;
-    		row.insertCell(3).innerHTML= libro.volumeInfo.title;
-    		row.insertCell(4).innerHTML= libro.volumeInfo.title;
+    		row.insertCell(3).innerHTML= respuesta.volumeInfo.title;
+    		row.insertCell(4).innerHTML= respuesta.volumeInfo.title;
 	    }
             
         
