--- a/html/createbook.html
+++ b/html/createbook.html
@@ -82,7 +82,7 @@
 		row.insertCell(0).innerHTML= libro.volumeInfo.title; 
 		  
 		
-		if (libro.volumeInfo.authors[0] == undefined){
+		if (libro.volumeInfo.authors[0] === undefined){
 			row.insertCell(1).innerHTML= "Anonimo";
 		}else{
 			row.insertCell(1).innerHTML=libro.volumeInfo.authors[0];
