--- a/html/createbook.html
+++ b/html/createbook.html
@@ -37,7 +37,7 @@
             	<label for="searchBook">Nombre del libro: </label>
             	<input type="text" id="searchBook">
             	
-		<input type="submit" id="btnSearchBook" value="Buscar Libro" /> 
+		<button id="btnSearchBook">Buscar Libro</button> 
 	    </form>
 		
 
