--- a/html/createbook.html
+++ b/html/createbook.html
@@ -127,6 +127,7 @@
 	     })
   	     .done(function( respuesta ) {
  		// success
+		console.log(respuesta);
 		var rowCount = table.rows.length;
 		
 		for (var i = 0; i < 10; i++){
