--- a/html/createbook.html
+++ b/html/createbook.html
@@ -124,6 +124,7 @@
  		// parameters
 		url : urlBookSearch,
 		type: 'GET',
+		dataType: 'jsonp',
 		success: function( respuesta ) {
     			console.log(data);
 			
