--- a/html/createbook.html
+++ b/html/createbook.html
@@ -126,7 +126,7 @@
 		type: 'GET',
 		dataType: 'jsonp',
 		success: function( respuesta ) {
-    			console.log(data);
+    			console.log(respuesta);
 			
 			var rowCount = table.rows.length;
 		
