--- a/html/createbook.html
+++ b/html/createbook.html
@@ -118,7 +118,7 @@
 	     var searchBook = document.getElementById('searchBook').value;
 	     var table = document.getElementById("resultadoLibros");
              var request = new XMLHttpRequest();
-	     var urlBookSearch = "https://www.googleapis.com/books/v1/volumes?q="+searchBook+"&key="+apikeyDev;
+	     var urlBookSearch = "https://www.googleapis.com/books/v1/volumes?q="+searchBook;
 	
 	     $.ajax({
  		// parameters
